--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,12 @@
 page-login {
-    .login-content.scroll-content{
+    .scroll-content{
         background: url('assets/imgs/background.jpeg');
+        background-color: #bce6ff;
+    }
+    .pTitle{
+        color: #84d1ff;
+        padding-left: 10%;
+        font-size: 15px;
+        font-weight: bold;
     }
 }
