--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,23 +5,38 @@ page-login {
     }
     .pTitle{
         color: #54AFFF;
-        padding-left: 10%;
-        font-size: 15px;
+        font-size: 200%;
         font-weight: bold;
+        text-align: center;
     }
     .input-text{
         background-color:#bce6ff;
+        font-size:90%;
     }
     .text-input{
         background-color: white;
-        height:120%;
+        height:150%;
         border-color: royalblue;
         border: 10px 2px 2px 2px;
     }
-    .submit{
-        margin-top: 30px;
+    .sincronizar{
+        margin-top: 120px;
+        width: 80%;
+        margin-left: 10%;
+    }
+    .ingresar{
+        margin-top: 50px;
+        width: 30%;
+        margin-left:70%;
     }
     .image{
         margin-left: 10px;
     }
+    .form-login{
+        width: 70%;
+        align-self: center;
+        margin-left:15%;
+        font-size: 30px;
+    }
+
 }
