--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,7 +9,7 @@ page-login {
        /* background-color: #bce6ff;*/
     }
     .pTitle{
-        color: #54AFFF;
+        color: rgb(84, 130, 255);
         font-size: 200%;
         font-weight: bold;
         text-align: center;
