styling survey and home

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,3 +17,12 @@
 .scroll-content{
     background: url('assets/imgs/background.jpeg');
 }
+.toolbar-background {
+    background-color:  rgb(84, 130, 255);
+  }
+  .toolbar-title{
+      color: white;
+  }
+  .back-button{
+    color: white;
+  }
