--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,13 @@
 page-home {
     .comment{
         color:grey;
+        text-align: center;
     }
 
+      .bar-button{
+          color:white;
+      }
+      .input-wrapper{
+          margin-top: 50px;
+      }
 }
