--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,11 @@ $colors: (
   dark:       #2C90BC
 );
 
-
+$text-input-md-highlight-color-invalid: transparent;
+$text-input-md-highlight-color-valid: transparent;
+$text-input-md-show-invalid-highlight: transparent;
+$text-input-md-highlight-color: transparent;
+$text-input-md-show-valid-highlight: transparent;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
