--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #38B5EE,
-  secondary:  #32db64,
+  primary:    #3da6d6,
+  secondary:  #3da6d6,
   danger:     #f53d3d,
-  light:      #C4E9FB,
-  dark:       #2C90BC
+  light:      #f4f4f4,
+  dark:       #222
 );
 
 
@@ -86,3 +86,11 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+$azul_default: #3da6d6;
+$azul_fondo: #e0f3fa; //%e6fafa
+$azul_obscuro: #2d86af;
+$azul_numero: #9ac5e7;
+$azul_fondo_numero: #bddced;
+$gris_input: #d2d2d2;
+$gris_dropdown: #F2F2F2;
