--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -236,6 +236,10 @@ h1{
     opacity: 0.5;
 }
 
+.control button:disabled ~ p {
+    opacity: 0.5;
+}
+
 .respuestas{
 transition: all 0.5s ease;
 }
