--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,7 +4,7 @@ page-login {
         background-color: white;
     }
     .scroll-content{
-        background: url('assets/imgs/back.jpg');
+        // background: url('assets/imgs/back.jpg');
         background-size:100%;
        /* background-color: #bce6ff;*/
     }
