cambios en  la busqueda de establecimientos, se agrega funcionalidad de aqlite para establecieminetos  y para answers  se llama survey, se agrega el método prara mostrar la cantidad de cuestionarios sincronizados

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -278,9 +278,13 @@ transition: all 0.5s ease;
 
 //**************************Input -radio
 
+.alert-wrapper {
+    width: 80% !important;
+    max-width: 100% !important;
+    min-width: 80% !important;
+}
 
-
-/**************  Estilo  de diseñador ******************/
+  /**************  Estilo  de diseñador ******************/
 
 
 
