--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -31,6 +31,10 @@ page-home {
       .bar-button-default-md:hover:not(.disable-hover), .bar-button-clear-md-default:hover:not(.disable-hover), .bar-button-md-default:hover:not(.disable-hover) {
           color: #2d86af;
       }
+      
 
+      .my-ion-list {
+        max-height: 50%;
+      }
 
 }
